--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 login-wrapper text-center">
+                <div class="col-12 login-wrapper login-wrapper-hide text-center">
                     <div class="user-pic">
                     </div>
                     <div class="form-group">
