--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <div class="form-group">
                         <input type="text" class="form-control" name="input-user" id="input-user" aria-describedby="helpId" placeholder="Nombre">                    
                         <input type="password" class="form-control" name="input-password" id="input-password" aria-describedby="helpId" placeholder="Password"> 
-                        <button type="button" class="btn btn-primary btn-login">Entrar</button>
+                        <button type="button" id="btn-login" class="btn btn-primary btn-login">Entrar</button>
+                        <div class="msg-login msg-succes msg-wrong msg-warning"></div>
                     </div>                  
                 </div>                
             </div>
