añadir gastos fijos comienzo

--- a/index.html
+++ b/index.html
@@ -52,25 +52,38 @@
                           <label class="first-label" for="input-alquiler">Alquiler</label>
                           <input type="text" name="input-alquiler" id="input-alquiler" class="form-control" placeholder="645€">
                           <button type="button" class="btn btn-primary btn-borrar">Borrar</button>
-                          <button type="button" class="btn btn-primary btn-add">Añadir</button>
                         </div>
                         <div class="form-group col-6 offset-3 delete-gasto-fijo">
                             <label for="input-transporte">T.Transporte</label>
                             <input type="text" name="input-transporte" id="input-transporte" class="form-control" placeholder="144€">
                             <button type="button" class="btn btn-primary btn-borrar">Borrar</button>
-                            <button type="button" class="btn btn-primary btn-add">Añadir</button>
                         </div>
                         <div class="form-group col-6 offset-3 delete-gasto-fijo">
                             <label for="input-seguro-coche">S.Coche</label>
                             <input type="text" name="input-seguro-coche" id="input-seguro-coche" class="form-control" placeholder="50€">
                             <button type="button" class="btn btn-primary btn-borrar">Borrar</button>
-                            <button type="button" class="btn btn-primary btn-add">Añadir</button>
                         </div>
                         <div class="form-group col-6 offset-3 delete-gasto-fijo">
                             <label for="input-internet">Internet</label>
                             <input type="text" name="input-internet" id="input-internet" class="form-control" placeholder="19.95€">
                             <button type="button" class="btn btn-primary btn-borrar">Borrar</button>
-                            <button type="button" class="btn btn-primary btn-add">Añadir</button>
+                        </div>
+                        <div class="wrapper add-gastos-fijos">
+                            <div class="wrapper-add-gastos-fijos">
+                                <div class="col-12">
+                                   <button type="button" class="btn btn-primary btn-show-gastos-fijos hide-btn-show-gastos-fijos ">Añadir Gastos Fijos</button> 
+                                </div>                             
+                            </div>
+                            <div class="row hide-add-gastos-fijos row-add-gastos-fijos">
+                                <div class="form-group col-8 offset-2">
+                                    <input type="text" name="input-add-producto-gasto-fijo" id="input-add-producto-gasto-fijo" class="form-control input-add-producto-gasto-fijo"
+                                        placeholder="Producto">
+                                    <input type="text" name="input-add-cantidad-gasto-fijo" id="input-add-cantidad-gasto-fijo" class="form-control input-add-cantidad-gasto-fijo"
+                                        placeholder="Cantidad">
+                                    <button type="button" class="btn btn-primary btn-borrar-gastos-fijos">Borrar</button>
+                                    <button type="button" class="btn btn-primary btn-add-gastos-fijos">Añadir</button>
+                                </div>
+                            </div>
                         </div>
                     </section>
                     <section class="otros-gastos">
