header sticky almost done

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <title>App Hércules</title>
 </head>
 <body>
-    <header>
-        <div class="jumbotron jumbotron-fluid text-center">
-            <div class="container">
-                <h1 class="display-3">App Hércules</h1>
-                <p class="lead">Tu aplicación personal</p>
-                <hr class="my-2">
-                <p class="p-empezamos">¿Empezamos?</p>
-                <button type="button" class="btn btn-primary btn-comenzar btn-comenzar-hide">Comenzar</button>
-            </div>
+    <div class="jumbotron jumbotron-fluid text-center">
+        <div class="container">
+            <h1 class="display-3">App Hércules</h1>
+            <p class="lead">Tu aplicación personal</p>
+            <hr class="my-2">
+            <p class="p-empezamos">¿Empezamos?</p>
+            <button type="button" class="btn btn-primary btn-comenzar btn-comenzar-hide">Comenzar</button>
         </div>
+    </div>
+    <header class="initial-header sticky-header">
         <div class="container">
             <div class="row">
                 <div class="col-12 login-wrapper login-wrapper-hide text-center">
@@ -37,7 +37,7 @@
             </div>
         </div>                
     </header>
-    <div class="container main-sections">
+    <div class="container main-sections display-main-sections">
         <div class="row">
             <div class="col-12 text-center">
                 <p class="subir-scroll">UP!</p>
