add gastos js crear tareas comenzado, revisar

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                                         placeholder="Cantidad">
                                     <button type="button" class="btn btn-primary btn-borrar-gastos-fijos">Borrar</button>
                                     <button type="button" class="btn btn-primary btn-add-gastos-fijos">Añadir</button>
+                                    <div class="wrapper-add-lista">
+                                        <ul class="lista" id="lista">
+                                            <li></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
