comenzado funcionalidad otros Gastos

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
                                         placeholder="Producto">
                                     <input type="text" name="input-add-cantidad-gasto-fijo" id="input-add-cantidad-gasto-fijo" class="form-control input-add-cantidad-gasto-fijo"
                                         placeholder="Cantidad">
-                                    <button type="button" class="btn btn-primary btn-borrar-gastos-fijos">Borrar</button>
+                                    <!-- <button type="button" class="btn btn-primary btn-borrar-gastos-fijos">Borrar</button> -->
                                     <button type="button" class="btn btn-primary btn-add-gastos-fijos">Añadir</button>
                                     <div class="wrapper-add-lista">
                                         <ul class="lista" id="lista">
                                             <!-- <li></li> -->
+                                            <!--  -->
                                         </ul>
                                     </div>
                                 </div>
@@ -98,8 +99,14 @@
                         <div class="form-group col-12">
                             <input type="text" name="input-producto" id="input-producto" class="form-control" placeholder="Producto">
                             <input type="text" name="input-cantidad" id="input-cantidad" class="form-control" placeholder="Cantidad">
-                            <button type="button" class="btn btn-primary btn-borrar-otros-gastos">Borrar</button>
-                            <button type="button" class="btn btn-primary btn-add">Añadir</button>
+                           <!--  <button type="button" class="btn btn-primary btn-borrar-otros-gastos">Borrar</button> -->
+                            <button type="button" class="btn btn-primary btn-add-otros-gastos">Añadir</button>
+                            <div class="wrapper-add-lista">
+                                <ul class="lista" id="lista-otros-gastos">
+                                    <!-- <li></li> -->
+                                    <!--  -->
+                                </ul>
+                            </div>
                         </div>
                     </section>
                     <section class="sumar">
