--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                                         </ul>
                                     </div>
                                 </div>
+                                <div class="output-no-value" id="output-no-value">
+
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -96,6 +99,11 @@
                         <h2>Otros gastos</h2>
                         <p>Añade, cambia o borra cualquiera de los siguientes apartados.</p>
                         <hr class="my-2">
+                        <div class="new-otros-gastos">
+                            <ul class="lista-otros-gastos-guardados" id="lista-otros-gastos-guardados">
+
+                            </ul>
+                        </div>
                         <div class="form-group col-12">
                             <input type="text" name="input-producto" id="input-producto" class="form-control" placeholder="Producto">
                             <input type="text" name="input-cantidad" id="input-cantidad" class="form-control" placeholder="Cantidad">
@@ -106,6 +114,9 @@
                                     <!-- <li></li> -->
                                     <!--  -->
                                 </ul>
+                            </div>
+                            <div class="output-no-value" id="output-no-value">
+
                             </div>
                         </div>
                     </section>
