--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <input type="password" class="form-control inpt-login hide-when-login" name="input-password" id="input-password" aria-describedby="helpId" placeholder="Password"> 
                         <button type="button" id="btn-login" class="btn btn-primary btn-login">Entrar</button>
                         <div class="msg-login msg-succes msg-wrong msg-warning"></div>
+                        <div class="sticky-header-user-name"></div>
                     </div>                  
                 </div>                
             </div>
@@ -141,3 +142,6 @@
     </footer>
 </body>
 </html>
+
+
+
