subirTopScroll / falta ocultar y mostrar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p>¡HOLA!</p>
                         <p>Vamos a comenzar:</p>
                         <h2>Gastos fijos</h2>
-                        <p>Selecciona, cambia o borra cualquiera de los siguientes apartados</p>
+                        <p class="p-gastos-fijos">Selecciona, cambia o borra cualquiera de los siguientes apartados</p>
                         <hr class="my-2">
                         <div class="form-group col-6 offset-3 delete-gasto-fijo">
                           <label class="first-label" for="input-alquiler">Alquiler</label>
