add gastosFijos / add otrosGastos -> mejorado

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                             <input type="text" name="input-internet" id="input-internet" class="form-control" placeholder="19.95€">
                             <button type="button" class="btn btn-primary btn-borrar">Borrar</button>
                         </div>
+                        <div class="nuevo-gasto-fijo-guardado"></div>
                         <div class="wrapper add-gastos-fijos">
                             <div class="wrapper-add-gastos-fijos">
                                 <div class="col-12">
@@ -116,7 +117,7 @@
                                     <!--  -->
                                 </ul>
                             </div>
-                            <div class="output-no-value" id="output-no-value">
+                            <div class="output-no-value-otros-gastos" id="output-no-value-otros-gastos">
 
                             </div>
                         </div>
