--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                                 </div>                             
                             </div>
                             <div class="row hide-add-gastos-fijos row-add-gastos-fijos">
+                                <h3>Añade tus gastos fijos</h3>
                                 <div class="form-group col-8 offset-2">
                                     <input type="text" name="input-add-producto-gasto-fijo" id="input-add-producto-gasto-fijo" class="form-control input-add-producto-gasto-fijo"
                                         placeholder="Producto">
@@ -101,24 +102,17 @@
                         <h2>Otros gastos</h2>
                         <p>Añade, cambia o borra cualquiera de los siguientes apartados.</p>
                         <hr class="my-2">
-                        <div class="new-otros-gastos">
-                            <ul class="lista-otros-gastos-guardados" id="lista-otros-gastos-guardados">
-
+                        <div class="wrapper-add-lista-otros-gastos">
+                            <ul class="lista" id="lista-otros-gastos">
+                                <!-- <li></li> -->
+                                <!--  -->
                             </ul>
                         </div>
                         <div class="form-group col-12">
                             <input type="text" name="input-producto" id="input-producto" class="form-control" placeholder="Producto">
                             <input type="text" name="input-cantidad" id="input-cantidad" class="form-control" placeholder="Cantidad">
-                           <!--  <button type="button" class="btn btn-primary btn-borrar-otros-gastos">Borrar</button> -->
                             <button type="button" class="btn btn-primary btn-add-otros-gastos">Añadir</button>
-                            <div class="wrapper-add-lista">
-                                <ul class="lista" id="lista-otros-gastos">
-                                    <!-- <li></li> -->
-                                    <!--  -->
-                                </ul>
-                            </div>
                             <div class="output-no-value-otros-gastos" id="output-no-value-otros-gastos">
-
                             </div>
                         </div>
                     </section>
