nuevos ajustes Gastos Fijos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 </div>                             
                             </div>
                             <div class="row hide-add-gastos-fijos row-add-gastos-fijos">
-                                <h3>Añade tus gastos fijos</h3>
+                                <h3 class= "newone">Añade tus gastos fijos</h3>
                                 <div class="form-group col-8 offset-2">
                                     <input type="text" name="input-add-producto-gasto-fijo" id="input-add-producto-gasto-fijo" class="form-control input-add-producto-gasto-fijo"
                                         placeholder="Producto">
@@ -92,6 +92,7 @@
                                         </ul>
                                     </div>
                                 </div>
+                                <button type="button" id="btn-json" class="btn btn-primary">pedir datos</button>
                                 <div class="output-no-value" id="output-no-value">
 
                                 </div>
